--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
         <div class="container-fluid">
-            <a class="navbar-brand d-flex align-items-center justify-content-center flex-grow-1" href="index.html">
-                <img class="rounded-circle me-2 d-block d-lg-none" src="img/profile.png" alt=""
-                    style="width: 32px; height: 32px;">
+            <a class="navbar-brand d-flex align-items-center justify-content-center flex-grow-1" href="index.html" aria-label="Home">
+                <img class="rounded-circle me-2 d-block d-lg-none" src="img/profile.png" alt="Profile photo"
+                    style="width: 32px; height: 32px;" width="32" height="32">
                 <span class="d-block d-lg-none">Dario Di Nucci</span>
                 <span class="d-none d-lg-block">
-                    <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profile.png" alt="">
+                    <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profile.png" alt="Profile photo" width="192" height="192">
                 </span>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -50,7 +50,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link active" href="index.html">About Me</a>
+                    <a class="nav-link active" href="index.html" aria-current="page">About Me</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="projects.html">Projects & Tools</a>
@@ -68,7 +68,7 @@
         </div>
         <span class="d-none d-lg-block text-center">
             <a href="https://orcid.org/0000-0002-3861-1902" target="orcid.widget" rel="noopener noreferrer">
-                <img class="img-fluid img-orcid mb-2 w-50" src="img/my_orcid_qrcode.png" alt="" />
+                <img class="img-fluid img-orcid mb-2 w-50" src="img/my_orcid_qrcode.png" alt="ORCID QR code" loading="lazy" />
             </a>
         </span>
     </nav>
@@ -110,8 +110,8 @@
                             </p>
 
                             <div class="contact-info mb-4">
-                                <a href="https://www.unisa.it/" target="_blank" class="d-block mb-3">
-                                    <img id="unisa-logo" src="img/unisa.jpg" alt="University of Salerno" />
+                                <a href="https://www.unisa.it/" target="_blank" rel="noopener noreferrer" class="d-block mb-3">
+                                    <img id="unisa-logo" src="img/unisa.jpg" alt="University of Salerno" loading="lazy" width="120" height="120" />
                                 </a>
                                 <h4 class="gradient-text mb-3">Università degli Studi di Salerno</h4>
                                 <p class="text-muted mb-3">
@@ -127,18 +127,18 @@
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="http://it.linkedin.com/pub/dario-di-nucci/44/926/654/en" title="LinkedIn">
+                                    <a href="http://it.linkedin.com/pub/dario-di-nucci/44/926/654/en" target="_blank" rel="noopener noreferrer" title="LinkedIn">
                                         <i class="fab fa-linkedin"></i>
                                     </a>
                                 </li>
                                 <li>
                                     <a href="https://scholar.google.it/citations?user=YJqcbnIAAAAJ"
-                                        title="Google Scholar">
+                                        target="_blank" rel="noopener noreferrer" title="Google Scholar">
                                         <i class="ai ai-google-scholar"></i>
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="https://github.com/dardin88" title="GitHub">
+                                    <a href="https://github.com/dardin88" target="_blank" rel="noopener noreferrer" title="GitHub">
                                         <i class="fab fa-github"></i>
                                     </a>
                                 </li>
@@ -210,10 +210,10 @@
 
     <!-- Core JavaScript -->
     <!-- Bootstrap v5 Bundle (no jQuery dependency) -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" defer></script>
 
     <!-- Custom scripts for this template -->
-    <script src="js/modern-interactions.js?v=20250808"></script>
+    <script src="js/modern-interactions.min.js?v=20250808" defer></script>
 
 </body>
 
