--- a/projects.html
+++ b/projects.html
@@ -33,12 +33,12 @@
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
         <div class="container-fluid">
-            <a class="navbar-brand d-flex align-items-center justify-content-center flex-grow-1" href="index.html">
+        <a class="navbar-brand d-flex align-items-center justify-content-center flex-grow-1" href="index.html" aria-label="Home">
                 <img class="rounded-circle me-2 d-block d-lg-none" src="img/profile.png" alt=""
-                    style="width: 32px; height: 32px;">
+            style="width: 32px; height: 32px;" width="32" height="32">
                 <span class="d-block d-lg-none">Dario Di Nucci</span>
                 <span class="d-none d-lg-block">
-                    <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profile.png" alt="">
+            <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profile.png" alt="Profile photo" width="192" height="192">
                 </span>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -53,7 +53,7 @@
                     <a class="nav-link" href="index.html">About Me</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" href="projects.html">Projects & Tools</a>
+                    <a class="nav-link active" href="projects.html" aria-current="page">Projects & Tools</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="services.html">Professional Services</a>
@@ -68,7 +68,7 @@
         </div>
         <span class="d-none d-lg-block text-center">
             <a href="https://orcid.org/0000-0002-3861-1902" target="orcid.widget" rel="noopener noreferrer">
-                <img class="img-fluid img-orcid mb-2 w-50" src="img/my_orcid_qrcode.png" alt="" />
+                <img class="img-fluid img-orcid mb-2 w-50" src="img/my_orcid_qrcode.png" alt="ORCID QR code" loading="lazy" />
             </a>
         </span>
     </nav>
@@ -242,7 +242,7 @@
                                         class="btn-modern btn-sm me-2">
                                         <i class="fab fa-github me-1"></i> Source
                                     </a>
-                                    <a href="https://www.youtube.com/watch?v=7zOngDQ1z_k" target="_blank"
+                                    <a href="https://www.youtube.com/watch?v=7zOngDQ1z_k" target="_blank" rel="noopener noreferrer"
                                         class="btn-modern btn-sm">
                                         <i class="fas fa-play me-1"></i> Video
                                     </a>
@@ -268,11 +268,11 @@
                             <div class="d-flex align-items-center justify-content-between mb-3">
                                 <h4 class="card-title mb-0">Defuse</h4>
                                 <div>
-                                    <a href="https://github.com/radon-h2020/radon-defuse/" target="_blank"
+                                    <a href="https://github.com/radon-h2020/radon-defuse/" target="_blank" rel="noopener noreferrer"
                                         class="btn-modern btn-sm me-2">
                                         <i class="fab fa-github me-1"></i> Source
                                     </a>
-                                    <a href="https://www.youtube.com/watch?v=37mmLdCX3jU/" target="_blank"
+                                    <a href="https://www.youtube.com/watch?v=37mmLdCX3jU" target="_blank" rel="noopener noreferrer"
                                         class="btn-modern btn-sm">
                                         <i class="fas fa-play me-1"></i> Video
                                     </a>
@@ -297,11 +297,11 @@
                             <div class="d-flex align-items-center justify-content-between mb-3">
                                 <h4 class="card-title mb-0">RepoMiner</h4>
                                 <div>
-                                    <a href="https://github.com/radon-h2020/radon-repository-miner" target="_blank"
+                                    <a href="https://github.com/radon-h2020/radon-repository-miner" target="_blank" rel="noopener noreferrer"
                                         class="btn-modern btn-sm me-2">
                                         <i class="fab fa-github me-1"></i> Source
                                     </a>
-                                    <a href="https://radon-h2020.github.io/radon-repository-miner/" target="_blank"
+                                    <a href="https://radon-h2020.github.io/radon-repository-miner/" target="_blank" rel="noopener noreferrer"
                                         class="btn-modern btn-sm">
                                         <i class="fas fa-book me-1"></i> Docs
                                     </a>
@@ -327,11 +327,11 @@
                             <div class="d-flex align-items-center justify-content-between mb-3">
                                 <h4 class="card-title mb-0">AnsibleMetrics</h4>
                                 <div>
-                                    <a href="https://github.com/radon-h2020/radon-ansible-metrics" target="_blank"
+                                    <a href="https://github.com/radon-h2020/radon-ansible-metrics" target="_blank" rel="noopener noreferrer"
                                         class="btn-modern btn-sm me-2">
                                         <i class="fab fa-github me-1"></i> Source
                                     </a>
-                                    <a href="https://radon-h2020.github.io/radon-ansible-metrics" target="_blank"
+                                    <a href="https://radon-h2020.github.io/radon-ansible-metrics" target="_blank" rel="noopener noreferrer"
                                         class="btn-modern btn-sm">
                                         <i class="fas fa-book me-1"></i> Docs
                                     </a>
@@ -354,7 +354,7 @@
                         <div class="modern-card h-100">
                             <div class="d-flex align-items-center justify-content-between mb-3">
                                 <h4 class="card-title mb-0">SoCRATES</h4>
-                                <a href="https://github.com/jonas-db/socrates" target="_blank"
+                                <a href="https://github.com/jonas-db/socrates" target="_blank" rel="noopener noreferrer"
                                     class="btn-modern btn-sm">
                                     <i class="fab fa-github me-1"></i> Source
                                 </a>
@@ -379,15 +379,15 @@
                             <div class="d-flex align-items-center justify-content-between mb-3">
                                 <h4 class="card-title mb-0">aDoctor</h4>
                                 <div>
-                                    <a href="https://plugins.jetbrains.com/plugin/13443-adoctor" target="_blank"
+                                    <a href="https://plugins.jetbrains.com/plugin/13443-adoctor" target="_blank" rel="noopener noreferrer"
                                         class="btn-modern btn-sm me-2">
                                         <i class="fas fa-plug me-1"></i> Plugin
                                     </a>
-                                    <a href="https://github.com/emaiannone/aDoctor" target="_blank"
+                                    <a href="https://github.com/emaiannone/aDoctor" target="_blank" rel="noopener noreferrer"
                                         class="btn-modern btn-sm me-2">
                                         <i class="fab fa-github me-1"></i> Source
                                     </a>
-                                    <a href="https://www.youtube.com/watch?v=1c2EhVXiKis" target="_blank"
+                                    <a href="https://www.youtube.com/watch?v=1c2EhVXiKis" target="_blank" rel="noopener noreferrer"
                                         class="btn-modern btn-sm">
                                         <i class="fas fa-play me-1"></i> Video
                                     </a>
@@ -411,11 +411,11 @@
                             <div class="d-flex align-items-center justify-content-between mb-3">
                                 <h4 class="card-title mb-0">PETrA</h4>
                                 <div>
-                                    <a href="https://github.com/dardin88/PETrA" target="_blank"
+                                    <a href="https://github.com/dardin88/PETrA" target="_blank" rel="noopener noreferrer"
                                         class="btn-modern btn-sm me-2">
                                         <i class="fab fa-github me-1"></i> Source
                                     </a>
-                                    <a href="https://www.youtube.com/watch?v=1rrFPDMIBbI" target="_blank"
+                                    <a href="https://www.youtube.com/watch?v=1rrFPDMIBbI" target="_blank" rel="noopener noreferrer"
                                         class="btn-modern btn-sm">
                                         <i class="fas fa-play me-1"></i> Video
                                     </a>
@@ -440,7 +440,7 @@
                         <div class="modern-card h-100">
                             <div class="d-flex align-items-center justify-content-between mb-3">
                                 <h4 class="card-title mb-0">Landfill</h4>
-                                <a href="https://zenodo.org/records/6080422" target="_blank" class="btn-modern btn-sm">
+                                <a href="https://zenodo.org/records/6080422" target="_blank" rel="noopener noreferrer" class="btn-modern btn-sm">
                                     <i class="fas fa-database me-1"></i> Dataset
                                 </a>
                             </div>
@@ -468,7 +468,7 @@
                         <div class="modern-card h-100">
                             <div class="d-flex align-items-center justify-content-between mb-3">
                                 <h4 class="card-title mb-0">GNOME Maps</h4>
-                                <a href="https://wiki.gnome.org/Apps/Maps" target="_blank" class="btn-modern btn-sm">
+                                <a href="https://wiki.gnome.org/Apps/Maps" target="_blank" rel="noopener noreferrer" class="btn-modern btn-sm">
                                     <i class="fas fa-external-link-alt me-1"></i> Project
                                 </a>
                             </div>
@@ -488,7 +488,7 @@
                         <div class="modern-card h-100">
                             <div class="d-flex align-items-center justify-content-between mb-3">
                                 <h4 class="card-title mb-0">GraphHopper</h4>
-                                <a href="https://graphhopper.com" target="_blank" class="btn-modern btn-sm">
+                                <a href="https://graphhopper.com" target="_blank" rel="noopener noreferrer" class="btn-modern btn-sm">
                                     <i class="fas fa-external-link-alt me-1"></i> Project
                                 </a>
                             </div>
@@ -512,10 +512,10 @@
 
     <!-- Core JavaScript -->
     <!-- Bootstrap v5 Bundle (no jQuery dependency) -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" defer></script>
 
     <!-- Custom scripts for this template -->
-    <script src="js/modern-interactions.js?v=20250808"></script>
+    <script src="js/modern-interactions.min.js?v=20250808" defer></script>
 
 </body>
 
