--- a/services.html
+++ b/services.html
@@ -33,12 +33,12 @@
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
         <div class="container-fluid">
-            <a class="navbar-brand d-flex align-items-center justify-content-center flex-grow-1" href="index.html">
-                <img class="rounded-circle me-2 d-block d-lg-none" src="img/profile.png" alt=""
-                    style="width: 32px; height: 32px;">
+            <a class="navbar-brand d-flex align-items-center justify-content-center flex-grow-1" href="index.html" aria-label="Home">
+                <img class="rounded-circle me-2 d-block d-lg-none" src="img/profile.png" alt="Profile photo"
+                    style="width: 32px; height: 32px;" width="32" height="32">
                 <span class="d-block d-lg-none">Dario Di Nucci</span>
                 <span class="d-none d-lg-block">
-                    <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profile.png" alt="">
+                    <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profile.png" alt="Profile photo" width="192" height="192">
                 </span>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
@@ -55,7 +55,7 @@
                     <a class="nav-link" href="projects.html">Projects & Tools</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" href="services.html">Professional Services</a>
+                    <a class="nav-link active" href="services.html" aria-current="page">Professional Services</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="teaching.html">Teaching</a>
@@ -67,7 +67,7 @@
         </div>
         <span class="d-none d-lg-block text-center">
             <a href="https://orcid.org/0000-0002-3861-1902" target="orcid.widget" rel="noopener noreferrer">
-                <img class="img-fluid img-orcid mb-2 w-50" src="img/my_orcid_qrcode.png" alt="" />
+                <img class="img-fluid img-orcid mb-2 w-50" src="img/my_orcid_qrcode.png" alt="ORCID QR code" loading="lazy" />
             </a>
         </span>
     </nav>
@@ -275,10 +275,10 @@
 
     <!-- Core JavaScript -->
     <!-- Bootstrap v5 Bundle (no jQuery dependency) -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" defer></script>
 
     <!-- Custom scripts for this template -->
-    <script src="js/modern-interactions.js?v=20250808"></script>
+    <script src="js/modern-interactions.min.js?v=20250808" defer></script>
 
 </body>
 
